asupersync-macros/tests/compile_fail/spawn_reversed_name.rs
use asupersync_macros::spawn;

fn main() {
    let _ = spawn!(scope, async { 42 }, "worker");
}
